--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-devtools</artifactId>
 	</dependency>
+	
+	<dependency>
+	  <groupId>org.json</groupId>
+	  <artifactId>json</artifactId>
+	  <version>20140107</version>
+	</dependency>
+	
 	</dependencies>
 
 	<build>
